Started index page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <title>SebastianDuarteG </title>
 </head>
 <body>
-    <a href="/SebastianDuarteG.github.io/csc300x-hw2/" target="_blank">csc300x-hw2</a>
+    <a href="/SebastianDuarteG.github.io/csc300x-hw2/index.html" target="_blank">csc300x-hw2</a>
 </body>
 </html>
