--- a/csc300x-hw2/index.html
+++ b/csc300x-hw2/index.html
@@ -9,10 +9,10 @@
         Welcome to Granny's Pies <sup>TM</sup>
     </h1>
     <p>About us:</p>
-    
+
 
     <p>
-        <a href="/SebastianDuarteG.github.io/csc300x-hw2/pie.html" target="_blank">Grandma's Lemon Meringue Pie</a>
+        <a href="/SebastianDuarteG.github.io/csc300x-hw2/pie" target="_blank">Grandma's Lemon Meringue Pie</a>
     </p>
 
 </body>    
