--- a/csc300x-hw2/index.html
+++ b/csc300x-hw2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>SebastianDuarteG </title>
+    <title>index </title>
      <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
 
 
     <p>
-        <a href="SebastianDuarteG.github.io/csc300x-hw2/pie" target="_blank">Grandma's Lemon Meringue Pie</a>
+        <a href="https://sebastianduarteg.github.io/csc300x-hw2/pie" target="_blank">Grandma's Lemon Meringue Pie</a>
     </p>
 
 </body>    
