--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 
-    <a href="SebastianDuarteG.github.io/csc300x-hw2/index" target="_blank">csc300x-hw2</a>
+    <a href="https://sebastianduarteg.github.io/csc300x-hw2/index" target="_blank">csc300x-hw2</a>
 </body>
 </html>
