--- a/csc300x-hw2/index.html
+++ b/csc300x-hw2/index.html
@@ -12,7 +12,7 @@
 
 
     <p>
-        <a href="https://sebastianduarteg.github.io/csc300x-hw2/pie" target="_blank">Grandma's Lemon Meringue Pie</a>
+        <a href="/pie" target="_blank">Grandma's Lemon Meringue Pie</a>
     </p>
 
 </body>    
