--- a/csc300x-hw2/index.html
+++ b/csc300x-hw2/index.html
@@ -1,19 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>index </title>
+    <title>Home </title>
      <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
     <h1>
         Welcome to Granny's Pies <sup>TM</sup>
     </h1>
-    <p>About us:</p>
 
+    <h2>
+        Our trade recipes:
+    </h2>
 
+    <p><a href="/pie" target="_blank">Grandma's Lemon Meringue Pie</a></p>
+    <p>More to come...</p>
+    
+
+    <h2>
+        Contact Us:
+    </h2>
+    <p><strong>Phone Number:</strong> +850 (795) 464-6843</p>
+    <p><strong>Email:</strong>grannys@pies.org</p>
+
+    <h2>Mailing Address:</h2>
+    <p>Granny's Pies<sup>TM</sup>, 102458</p>
+    <p>PO BOX 86164</p>
+    <p>Terminal Annex</p>
+    <p>Los Angeles, CA 90086-0164</p>
+
+    <h2>Info:</h2>
     <p>
-        <a href="/pie" target="_blank">Grandma's Lemon Meringue Pie</a>
+        Since its establishment in 1975, we here at Granny's Pies<sup>TM</sup> have
+        strived to provide the greatest products and services to our
+        beloved clients. Sadly, as of January 2021 our facilities were closed due
+        to trace amounts of asbestos being found in our products. We sincerely
+        apologize to our clients for getting caught. To ammend for our mistakes,
+        we will be giving away all of our trade recipes so that you could bring 
+        Granny's Pies <sup>TM</sup> to your home.
     </p>
-
 </body>    
 </html>
