--- a/csc300x-hw2/index.html
+++ b/csc300x-hw2/index.html
@@ -16,7 +16,7 @@
         Our trade recipes:
     </h2>
 
-    <p><a href="/pie" target="_blank">Grandma's Lemon Meringue Pie</a></p>
+    <p><a href="csc300x-hw2/pie" target="_blank">Grandma's Lemon Meringue Pie</a></p>
     <p>More to come...</p>
 
     <h2>
