--- a/csc300x-hw2/pie.html
+++ b/csc300x-hw2/pie.html
@@ -10,7 +10,8 @@
 
     <h1>Grandma's Lemon Meringue Pie</h1>
 
-    <img src="" alt="">
+    <img src="http://SebastianDuarteG.github.io/csc300x-hw2/pie.jpg" 
+        alt="pie photo">
 
     lemon meringue pie
     
