Clean html and css checks

--- a/csc300x-hw2/pie.html
+++ b/csc300x-hw2/pie.html
@@ -8,7 +8,7 @@
 
     <title>Grandma's Lemon Meringue Pie </title>
 
-    <link rel="icon" type="image/gif/"
+    <link rel="icon" type="image/gif"
         href="http://SebastianDuarteG.github.io/csc300x-hw2/pie_icon.gif">
 
     <link rel="stylesheet" type="text/css" href="pie.css">
@@ -36,7 +36,7 @@
 
     <h2>INGREDIENTS</h2>    
     
-    <ul2>
+    <ul id="listimage">
         <li>1 cup white sugar</li> 
         <li>2 <abbr title="tablespoons">tbsp</abbr> all-purpose flour</li>
         <li>3 <abbr title="tablespoons">tbsp</abbr> cornstarch</li>
@@ -48,7 +48,7 @@
         <li>1 (9 inch) pie crust, baked</li>
         <li>4 egg whites</li>
         <li>6 <abbr title="tablespoons">tbsp</abbr> white sugar</li>
-    </ul2>
+    </ul>
 
     <hr>
 
@@ -129,11 +129,13 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All rights reserved<br><br>
     </div>
 
-    <a href="http://validator.w3.org/check?url=referer" target="_blank"><button>
-        <img src="w3c-html.png"></button></a>
-
-    <a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank"><button>
-        <img src="w3c-css.png"> </button></a>
+    <a href="http://validator.w3.org/check?url=referer" target="_blank">
+        <img src="w3c-html.png" alt= "w3c html 5 checker">
+    </a>
+    
+    <a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank">
+        <img src="w3c-css.png" alt="w3c css checker">
+    </a>
 
 </body>    
 </html>
