final commit for assingment 2

--- a/csc300x-hw2/pie.html
+++ b/csc300x-hw2/pie.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+<!--
+    Name: Sebastian Duarte
+    Assignment:Index webpage for a company called Granny's pies and 
+        a page for a lemon meringue pie recipe.
+    File Contents: Contents for a webpage with a lemon meringue pie recipe.
+-->
 
 <!--Extra features: background, favicon (seems to only work on firefox),
     Pie Bullet, Tight Heading Background-->
