--- a/csc300x-hw2/index.html
+++ b/csc300x-hw2/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 
+<!--
+    Name: Sebastian Duarte
+    Assignment: Index webpage for a company called Granny's pies and 
+        a page for a lemon meringue pie recipe.
+    File Contents: Contents of the index webpage of a company called
+        Granny's Pies
+-->
+
 <head>
     <title>Home </title>
     <link rel="stylesheet" type="text/css" href="index.css">
