--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 
-    <a href="csc300x-hw2/" target="_blank">csc300x-hw2</a>
+    <a href="csc300x-hw2/" target="_blank">csc300x-hw2</a> 
+    <br>
+    <a href="csc300x-project/" target="_blank">csc300x-project</a>
 </body>
 </html>
