--- a/csc300x-project/details.html
+++ b/csc300x-project/details.html
@@ -3,12 +3,12 @@
 <!--
     Name: Sebastian Duarte
     Assignment: CSC300x Project: Storepage
-    File Contents: Home page for ClaySoul Store
+    File Contents: Product details page for a certain product.
 -->
 
 <head>
 
-<title> ClaySoul </title>
+<title> Product Name </title>
 
 <link rel="stylesheet" type="text/css" href="styles/styles.css">
 
@@ -44,70 +44,35 @@
         </nav>
     </header>
 
-    <section class="splash-section">
-
-        <header>
-            Welcome to ClaySoul<br>
-        </header>
-
-        <section>
-            Express your soul with handmade artistry.
-        </section>
-
-        <header>
-            Our products
-        </header>
-
-        <section>
-            ClaySoul's handmade jewelry is crafted with precision,
-             passion, high-quality materials, and immense artistry. 
-            To ensure that our jewelry will help with expressing yourself, 
-            we ensure that our products are durable and stylish. Discover
-            yourself through expression with ClaySoul.
-        </section>
-
-        <header>
-            Featured products
-        </header>
-
+        
         <section class="flex-container">
-
-            <div class="flex-item">
-                <a href=#>Put Item Here</a><br>
-                Item Name
+            <div class="flex-item2">
+                <h2>Earring Name</h2>
+                <img src="images/search-icon.png" alt="Earring Image">
+                <p class="product-Price">
+                    $19.35
+                </p>
+                <button class="goButton">Add To Cart</button>
             </div>
-
             <div class="flex-item">
-                <a href=#>Put Item Here</a><br>
-                Item Name
+                <h3>About:</h3>
+                <p class="splash-section">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing<br> 
+                    elit, sed do eiusmod tempor incididunt ut labore et<br>
+                    dolore magna aliqua. 
+                </p>
+                <h3>Dimensions:</h3>
+                <p class="splash-section">
+                    <strong>Height:</strong> 1/2''
+                    <strong>Width:</strong> 1/2''
+                </p>
+                <h3>Materials:</h3>
+                <p class="splash-section">
+                    List Materials Here. 
+                </p>
             </div>
-
-            <div class="flex-item">
-                <a href=#>Put Item Here</a><br>
-                Item Name
-            </div>
-
-        </section>
-
-        <header>Start Shopping</header>
-
-        <section class="flex-container">
-
-            <div class="flex-item">
-                <a href=#>Best-Sellers</a>
-            </div>
-
-            <div class="flex-item">
-                <a href=#>Categories</a>
-            </div>
-
-            <div class="flex-item">
-                <a href=#>All Products</a>
-            </div>
-
         </section>
         
-    </section>
 
     <footer class="flex-container">
 
