--- a/csc300x-project/products.html
+++ b/csc300x-project/products.html
@@ -3,12 +3,12 @@
 <!--
     Name: Sebastian Duarte
     Assignment: CSC300x Project: Storepage
-    File Contents: Home page for ClaySoul Store
+    File Contents: Product List page for a certain category.
 -->
 
 <head>
 
-<title> ClaySoul </title>
+<title> Category Name </title>
 
 <link rel="stylesheet" type="text/css" href="styles/styles.css">
 
@@ -44,70 +44,57 @@
         </nav>
     </header>
 
-    <section class="splash-section">
+    <h3>
+        Earrings
+    </h3>
 
-        <header>
-            Welcome to ClaySoul<br>
-        </header>
-
-        <section>
-            Express your soul with handmade artistry.
-        </section>
-
-        <header>
-            Our products
-        </header>
-
-        <section>
-            ClaySoul's handmade jewelry is crafted with precision,
-             passion, high-quality materials, and immense artistry. 
-            To ensure that our jewelry will help with expressing yourself, 
-            we ensure that our products are durable and stylish. Discover
-            yourself through expression with ClaySoul.
-        </section>
-
-        <header>
-            Featured products
-        </header>
-
-        <section class="flex-container">
-
-            <div class="flex-item">
-                <a href=#>Put Item Here</a><br>
-                Item Name
-            </div>
-
-            <div class="flex-item">
-                <a href=#>Put Item Here</a><br>
-                Item Name
-            </div>
-
-            <div class="flex-item">
-                <a href=#>Put Item Here</a><br>
-                Item Name
-            </div>
-
-        </section>
-
-        <header>Start Shopping</header>
-
-        <section class="flex-container">
-
-            <div class="flex-item">
-                <a href=#>Best-Sellers</a>
-            </div>
-
-            <div class="flex-item">
-                <a href=#>Categories</a>
-            </div>
-
-            <div class="flex-item">
-                <a href=#>All Products</a>
-            </div>
-
-        </section>
-        
+    <section class="flex-container">
+        <div class="flex-item2">
+            <br>
+            <img src="images/search-icon.png" alt="tempImage"> 
+            <p class="product-Name">
+                Earring Name
+            </p>
+            <p class="product-Price"¨>
+                $19.35
+            </p>
+            <a class= "goButton" href="details.html" target="_blank">See Product</a>
+        </div>
+        <div class="flex-item2">
+            <br>
+            <img src="images/search-icon.png" alt="tempImage"> 
+            <p class="product-Name">
+                Earring Name
+            </p>
+            <p class="product-Price"¨>
+                $19.35
+            </p>
+            <a class= "goButton" href="details.html" target="_blank">See Product</a>
+        </div>
+        <div class="flex-item2">
+            <br>
+            <img src="images/search-icon.png" alt="tempImage"> 
+            <p class="product-Name">
+                Earring Name
+            </p>
+            <p class="product-Price"¨>
+                $19.35
+            </p>
+            <a class= "goButton" href="details.html" target="_blank">See Product</a>
+        </div>
+        <div class="flex-item2">
+            <br>
+            <img src="images/search-icon.png" alt="tempImage"> 
+            <p class="product-Name">
+                Earring Name
+            </p>
+            <p class="product-Price"¨>
+                $19.35
+            </p>
+            <a class= "goButton" href="details.html" target="_blank">See Product</a>
+        </div>
     </section>
+    
 
     <footer class="flex-container">
 
