--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <a href="csc300x-project/" target="_blank">csc300x-project</a>
     <br>
     <a href="csc300x-hw3/" target="_blank">csc300x-hw3</a>
+    <br>
+    <a href="csc300x-hw5/" target="_blank">csc300x-hw5</a>
 </body>
 </html>
