--- a/csc300x-hw5/index.html
+++ b/csc300x-hw5/index.html
@@ -1,53 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--
+    <!--
     Name: Sebastian Duarte
     Assignment: CSC300x Homework 5
     File Contents: Gallery Page for Github View Site
 -->
 
-<head>
+    <head>
 
-<title> Github Gallery </title>
+        <title> Github Gallery </title>
 
-<link rel="stylesheet" type="text/css" href="styles.css">
-<script src="scripts.js"></script>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+        <script src="scripts.js"></script>
 
-</head>
+    </head>
 
-<body>
-    <input type="text" id="gitUser" placeholder="Enter username:">
-    <button id="searchRepos">Search Repos</button>
-    <div id="gallery">
-        <div class="repo">
-            <div class="flex-container">
-                <img src="images/github-mark.png" alt="github logo">
-                <a href=
-                    "https://github.com/SebastianDuarteG/SebastianDuarteG.github.io">
-                    SebastianDuarteG.github.io
-                </a>
+    <body>
+        <input type="text" id="gitUser" placeholder="Enter username:">
+        <button id="searchRepos">Search Repos</button>
+        <div id="gallery">
+            <div class="repo">
+                <div class="flex-container">
+                    <img src="images/github-mark.png" alt="GitHub Logo">
+                    <a
+                        href="https://github.com/SebastianDuarteG/assignment-1">assignment-1</a>
+                </div>
+                <p class="description">
+                    First Individual Assignment to help practice Git and GitHub.
+                </p>
+                <p>
+                    Created at: 1/12/2024
+                </p>
+                <p>
+                    Updated at: 1/12/2024
+                </p>
+                <p>
+                    Number of Commits: 28
+                </p>
+                <p>
+                    Languages: N/A
+                </p>
+                <p>
+                    Watchers: 0
+                </p>
             </div>
-            <p class="description">
-                First Individual Assignment to help practice Git and GitHub. 
-            </p>
-            <p>
-                Created: 10/05/2021 
-            </p>
-            <p>
-                Updated: 10/05/2021 
-            </p>
-            <p>
-                Number of Commits: 20
-            </p>
-            <p>
-                Languages: Java
-            </p>
-            <p>
-                Watchers: 0
-            </p>
-            
+            <div class="repo">
+                <div class="flex-container">
+                    <img src="images/github-mark.png" alt="GitHub Logo">
+                    <a
+                        href="https://github.com/SebastianDuarteG/CSC340-Assignment-2">CSC340-Assignment-2</a>
+                </div>
+                <p class="description">
+                    N/A
+                </p>
+                <p>
+                    Created at: 2/1/2024
+                </p>
+                <p>
+                    Updated at: 2/1/2024
+                </p>
+                <p>
+                    Number of Commits: 1
+                </p>
+                <p>
+                    Languages: Java
+                </p>
+                <p>
+                    Watchers: 0
+                </p>
+            </div>
+            <div class="repo">
+                <div class="flex-container">
+                    <img src="images/github-mark.png" alt="GitHub Logo">
+                    <a
+                        href="https://github.com/SebastianDuarteG/csc340-Assignment-3">csc340-Assignment-3</a>
+                </div>
+                <p class="description">
+                    N/A
+                </p>
+                <p>
+                    Created at: 2/20/2024
+                </p>
+                <p>
+                    Updated at: 2/20/2024
+                </p>
+                <p>
+                    Number of Commits: N/A
+                </p>
+                <p>
+                    Languages: N/A
+                </p>
+                <p>
+                    Watchers: 0
+                </p>
+            </div>
+            <div class="repo">
+                <div class="flex-container">
+                    <img src="images/github-mark.png" alt="GitHub Logo">
+                    <a
+                        href="https://github.com/SebastianDuarteG/my-first-project">my-first-project</a>
+                </div>
+                <p class="description">
+                    N/A
+                </p>
+                <p>
+                    Created at: 1/11/2024
+                </p>
+                <p>
+                    Updated at: 1/11/2024
+                </p>
+                <p>
+                    Number of Commits: 5
+                </p>
+                <p>
+                    Languages: N/A
+                </p>
+                <p>
+                    Watchers: 0
+                </p>
+            </div>
+            <div class="repo">
+                <div class="flex-container">
+                    <img src="images/github-mark.png" alt="GitHub Logo">
+                    <a
+                        href="https://github.com/SebastianDuarteG/SebastianDuarteG.github.io">SebastianDuarteG.github.io</a>
+                </div>
+                <p class="description">
+                    N/A
+                </p>
+                <p>
+                    Created at: 1/22/2024
+                </p>
+                <p>
+                    Updated at: 1/22/2024
+                </p>
+                <p>
+                    Number of Commits: 30
+                </p>
+                <p>
+                    Languages: HTML
+                </p>
+                <p>
+                    Watchers: 0
+                </p>
+            </div>
+            <div class="repo">
+                <div class="flex-container">
+                    <img src="images/github-mark.png" alt="GitHub Logo">
+                    <a
+                        href="https://github.com/SebastianDuarteG/SpartanEvent">SpartanEvent</a>
+                </div>
+                <p class="description">
+                    N/A
+                </p>
+                <p>
+                    Created at: 2/3/2024
+                </p>
+                <p>
+                    Updated at: 2/25/2024
+                </p>
+                <p>
+                    Number of Commits: 25
+                </p>
+                <p>
+                    Languages: HTML
+                </p>
+                <p>
+                    Watchers: 0
+                </p>
+            </div>
         </div>
-    </div>
 
-</body>
+    </body>
 </html>
