--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <a href="csc300x-hw2/" target="_blank">csc300x-hw2</a> 
     <br>
-    <a href="csc300x-project/" target="_blank">csc300x-project</a>
+    <a href="csc300x-project/public/index.html" target="_blank">csc300x-project</a>
     <br>
     <a href="csc300x-hw3/" target="_blank">csc300x-hw3</a>
     <br>
